Added source code link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <p>This tool will generate a new poem based on a very simple Markov chain analysis of the given corpus.</p>
 
+<p><a href='https://github.com/jessefischer/poemize/'>Source Code</a></p>	
+
 <form id='poemize-form' action='javascript:void(0)'>
 <textarea id='corpus' name='corpus' autofocus placeholder='Corpus'></textarea>
 <input id='poemize' type='submit' name='poemize' value='Poemize'>
